--- a/P1Board/src/main/resources/templates/index.html
+++ b/P1Board/src/main/resources/templates/index.html
@@ -2,9 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
-
+<form action="/addmember" method="post">
+  <input name="password" type="text">
+  <input name="phoneNum" type="text">
+  <input name="email" type="text">
+  <button>제출</button>
+</form>
 </body>
 </html>
