--- a/P1Board/src/main/resources/templates/member/login.html
+++ b/P1Board/src/main/resources/templates/member/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/Css.css">
@@ -8,16 +7,15 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<th th:text="${member}"></th>
+
 <div id="wrap">
     <div class="center">
+        <h4>아이디</h4>
+        <p><input vatype="text"></p>
+        <h4>비밀번호</h4>
         <p><input type="text"></p>
-        <a href="/login">
-            <button class="btn btn-primary">로그인</button>
-        </a>
-        <a href="/signin">
-            <button class="btn btn-primary">회원가입</button>
-        </a>
+        <button class="btn btn-primary">로그인</button>
+        <a href="/signin"><button class="btn btn-primary">회원가입</button></a>
     </div>
 </div>
 
