--- a/P1Board/src/main/resources/templates/index.html
+++ b/P1Board/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id="wrap">
     <div class="center">
+        <td th:text="${session.id}"></td>
         <p><input type="text"></p>
         <a href="/login">
             <button class="btn btn-primary">로그인</button>
