--- a/P1Board/src/main/resources/templates/index.html
+++ b/P1Board/src/main/resources/templates/index.html
@@ -10,13 +10,16 @@
 <body>
 <div id="wrap">
     <div class="center">
-        <td th:text="${session.id}"></td>
+        <td th:hidden="${session.id}"></td>
         <p><input type="text"></p>
         <a href="/login">
             <button class="btn btn-primary">로그인</button>
         </a>
         <a href="/signin">
             <button class="btn btn-primary">회원가입</button>
+        </a>
+        <a href="/mypage/>
+            <button class="btn btn-primary">마이페이지</button>
         </a>
     </div>
 </div>
