--- a/P1Board/src/main/resources/templates/member/login.html
+++ b/P1Board/src/main/resources/templates/member/login.html
@@ -11,15 +11,16 @@
 <div id="wrap">
     <div class="center">
         <form action="/memberLogin" method="post">
-            <h4>아이디</h4>
-            <p><input name="uId" id="uId" placeholder="ID" type="text" required></p>
-            <h4>비밀번호</h4>
-            <p><input name="pwd" id="pwd" placeholder="password" type="password" required></p>
-            <button class="btn btn-primary">로그인</button>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">아이디</label>
+                <input type="text" name="uId" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">비밀번호</label>
+                <input type="password" name="pwd" class="form-control" id="exampleInputPassword1">
+            </div>
+            <button type="submit" class="btn btn-primary">로그인</button>
         </form>
-        <a href="/signin">
-            <button class="btn btn-primary">회원가입</button>
-        </a>
     </div>
 </div>
 
