--- a/P1Board/src/main/resources/templates/member/mypage.html
+++ b/P1Board/src/main/resources/templates/member/mypage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/css/Css.css">
+<link rel="stylesheet" href="/css/Css.css" xmlns="http://www.w3.org/1999/html">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -11,8 +11,10 @@
 <div id="wrap">
   <div class="center">
     <form action="/deleteMember">
-      <button type="submit" class="btn btn-primary">회원탈퇴</button>
+      <input name="id" type="text" th:value="${session.id}">
+      <button type="submit" class="btn btn-primary">회원 탈퇴</button>
     </form>
+    <a href="/edit"> <button type="submit" class="btn btn-primary">회원 수정</button></a>
   </div>
 </div>
 
