--- a/P1Board/src/main/resources/templates/board/board.html
+++ b/P1Board/src/main/resources/templates/board/board.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="/css/Css.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div id="wrap">
+    <div class="center">
+        <form action="/board/add" method="post">
+            <p><input name="id" type="text" th:value="${session.id}"></p>
+            <p><input type="text" name="title"></p>
+            <p><input type="text" name="content"></p>
+            <button class="btn btn-primary">작성</button>
+        </form>
+    </div>
+</div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
