--- a/P1Board/src/main/resources/templates/index.html
+++ b/P1Board/src/main/resources/templates/index.html
@@ -21,6 +21,9 @@
         <a href="/myPage">
             <button class="btn btn-primary">마이페이지</button>
         </a>
+        <a href="/board">
+            <button class="btn btn-primary">게시글 작성</button>
+        </a>
     </div>
 </div>
 
