--- a/P1Board/src/main/resources/templates/index.html
+++ b/P1Board/src/main/resources/templates/index.html
@@ -26,6 +26,9 @@
         <a href="/board">
             <button th:if="${session.id}!=null" class="btn btn-primary">게시글 작성</button>
         </a>
+        <a href="/board/list">
+            <button  class="btn btn-primary">게시글 보기</button>
+        </a>
     </div>
 </div>
 
