--- a/P1Board/src/main/resources/templates/board/list.html
+++ b/P1Board/src/main/resources/templates/board/list.html
@@ -10,11 +10,24 @@
 <div id="wrap">
     <div class="center">
         <form action="/board/list" method="get">
-            <td th:each="board:${list}">
-                <div th:text="${board.num}"></div>
-                <div th:text="${board.title}"></div>
-                <div th:text="${board.content}"></div>
-            </td>
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">게시글 번호</th>
+                    <th scope="col">제목</th>
+                    <th scope="col">내용</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <tr th:each="board :${list}">
+                    <td th:utext="${board.num}"></td>
+                    <td th:text="${board.title}"></td>
+                    <td th:text="${board.time}"></td>
+                </tr>
+                </tr>
+                </tbody>
+            </table>
         </form>
 
     </div>
