--- a/P1Board/src/main/resources/templates/board/list.html
+++ b/P1Board/src/main/resources/templates/board/list.html
@@ -9,27 +9,26 @@
 <body>
 <div id="wrap">
     <div class="center">
-        <form action="/board/list" method="get">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">게시글 번호</th>
-                    <th scope="col">제목</th>
-                    <th scope="col">내용</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                <tr th:each="board :${list}">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">게시글 번호</th>
+                <th scope="col">제목</th>
+                <th scope="col">작성 시간</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+            <tr th:each="board :${list}">
+                <a href="/board/detail/">
                     <td th:utext="${board.num}"></td>
-                    <td th:text="${board.title}"></td>
-                    <td th:text="${board.time}"></td>
-                </tr>
-                </tr>
-                </tbody>
-            </table>
-        </form>
-
+                </a>
+                <td th:text="${board.title}"></td>
+                <td th:text="${#temporals.format(board.dateTime,'HH:mm')}"></td>
+            </tr>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 
